tests/dependencies/global_with_same_name.sy
a :: 0
a :: 0
// error: A global variable with the name 'a' already exists
